--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Creating fishing website of Dall e3</h1>
+    <div class="main_container">
+        <header>
+            <div class="logo">
+                <img src="./images/B.Ed (1.5 years) (2).jpg" alt="logo">
+            </div>
+            <div class="bar_icon">
+                <a href="">Search</a>
+                <a href="">Login</a>
+                <a href="">Try ChatGPT</a>
+            </div>
+        </header>
+    </div>
+
+
+
 </body>
 </html>
+
